include $(top_srcdir)/common.mk

SUBDIRS = src profiles plugins data doc

MAINTAINERCLEANFILES +=          \
        intltool-*.in           \
        compile                 \
        configure               \
        INSTALL                 \
        install-sh              \
        missing                 \
        mkinstalldirs           \
        config.guess            \
        ltmain.sh               \
        config.sub              \
        depcomp                 \
        config.h.*              \
        aclocal.m4              \
        $(NULL)
