include $(top_srcdir)/common.mk

SUBDIRS = src plugins data doc po

MAINTAINERCLEANFILES +=          \
        intltool-*.in           \
        compile                 \
        configure               \
        INSTALL                 \
        install-sh              \
        missing                 \
        mkinstalldirs           \
        config.guess            \
        ltmain.sh               \
        config.sub              \
        depcomp                 \
        config.h.*              \
        aclocal.m4              \
        $(NULL)
