themedir = $(datadir)/icons/hicolor
size = 24x24
context = status

iconsdir = $(themedir)/$(size)/$(context)


icons_DATA = 			        \
	pmx-ac-adapter.png		\
	pmx-brightness-lcd.png		\
	pmx-brightness-kbd.png		\
	pmx-brightness-lcd-disabled.png	\
	pmx-brightness-kbd-disabled.png	\
	pmx-brightness-lcd-invalid.png	\
	pmx-brightness-kbd-invalid.png	\
	pmx-inhibit.png			\
	pmx-inhibit-invalid.png		\
	pmx-keyboard-000.png		\
	pmx-keyboard-030.png		\
	pmx-keyboard-060.png		\
	pmx-keyboard-100.png		\
	pmx-phone-000.png		\
	pmx-phone-030.png		\
	pmx-phone-060.png		\
	pmx-phone-100.png		\
	pmx-mouse-000.png		\
	pmx-mouse-030.png		\
	pmx-mouse-060.png		\
	pmx-mouse-100.png		\
	pmx-primary-000.png		\
	pmx-primary-020.png		\
	pmx-primary-040.png		\
	pmx-primary-060.png		\
	pmx-primary-080.png		\
	pmx-primary-100.png		\
	pmx-primary-000-charging.png	\
	pmx-primary-020-charging.png	\
	pmx-primary-040-charging.png	\
	pmx-primary-060-charging.png	\
	pmx-primary-080-charging.png	\
	pmx-primary-100-charging.png	\
	pmx-primary-charged.png		\
	pmx-primary-missing.png		\
	pmx-ups-000.png			\
	pmx-ups-020.png			\
	pmx-ups-040.png			\
	pmx-ups-060.png			\
	pmx-ups-080.png			\
	pmx-ups-100.png			\
	pmx-ups-000-charging.png	\
	pmx-ups-020-charging.png	\
	pmx-ups-040-charging.png	\
	pmx-ups-060-charging.png	\
	pmx-ups-080-charging.png	\
	pmx-ups-100-charging.png	\
	pmx-ups-charged.png		\
	pmx-ups-missing.png

noinst_DATA =

EXTRA_DIST =		\
	$(icons_DATA)	\
	$(noinst_DATA)

