themedir = $(pkgdatadir)/icons/hicolor
size = scalable
context = status

iconsdir = $(themedir)/$(size)/$(context)


icons_DATA = 			        \
	pmx-ac-adapter.svg		\
	pmx-brightness-lcd.svg		\
	pmx-brightness-kbd.svg		\
	pmx-brightness-lcd-disabled.svg	\
	pmx-brightness-kbd-disabled.svg	\
	pmx-brightness-lcd-invalid.svg	\
	pmx-brightness-kbd-invalid.svg	\
	pmx-inhibit.svg			\
	pmx-inhibit-invalid.svg		\
	pmx-keyboard-000.svg		\
	pmx-keyboard-030.svg		\
	pmx-keyboard-060.svg		\
	pmx-keyboard-100.svg		\
	pmx-phone-000.svg		\
	pmx-phone-030.svg		\
	pmx-phone-060.svg		\
	pmx-phone-100.svg		\
	pmx-mouse-000.svg		\
	pmx-mouse-030.svg		\
	pmx-mouse-060.svg		\
	pmx-mouse-100.svg		\
	pmx-primary-000.svg		\
	pmx-primary-020.svg		\
	pmx-primary-040.svg		\
	pmx-primary-060.svg		\
	pmx-primary-080.svg		\
	pmx-primary-100.svg		\
	pmx-primary-000-charging.svg	\
	pmx-primary-020-charging.svg	\
	pmx-primary-040-charging.svg	\
	pmx-primary-060-charging.svg	\
	pmx-primary-080-charging.svg	\
	pmx-primary-100-charging.svg	\
	pmx-primary-charged.svg		\
	pmx-primary-missing.svg		\
	pmx-ups-000.svg			\
	pmx-ups-020.svg			\
	pmx-ups-040.svg			\
	pmx-ups-060.svg			\
	pmx-ups-080.svg			\
	pmx-ups-100.svg			\
	pmx-ups-000-charging.svg	\
	pmx-ups-020-charging.svg	\
	pmx-ups-040-charging.svg	\
	pmx-ups-060-charging.svg	\
	pmx-ups-080-charging.svg	\
	pmx-ups-100-charging.svg	\
	pmx-ups-charged.svg		\
	pmx-ups-missing.svg

noinst_DATA =

EXTRA_DIST =		\
	$(icons_DATA)	\
	$(noinst_DATA)

